<resources>
    <string name="app_name">Indot Inventario</string>
    <string name="archivo">Archivo</string>
    <string name="articulo">ID Articulo</string>
    <string name="btn_modificar_numero_serie">Modificar Numero de Serie</string>
    <string name="btn_volver">Volver</string>
    <string name="cargar_inventario">Cargar inventario</string>
    <string name="codigo">Codigo</string>
    <string name="codigo_barras">Codigo de barras</string>
    <string name="contraseña">Contraseña</string>
    <string name="combinacion">ID Combinacion</string>
    <string name="dato_guardado">Dato Guardado</string>
    <string name="descripcion">Descripcion</string>
    <string name="escaner">Escaner</string>
    <string name="error_campos_vacios">Rellena los campos vacios</string>
    <string name="error_login">Usuario y/o contraseña incorrecta</string>
    <string name="generar_archivo">Generar Archivo</string>
    <string name="guardar_informacion">Guardar informacion</string>
    <string name="guardar_salir">Guardar y Salir</string>
    <string name="fecha_caducidad">Fecha de caducidad</string>
    <string name="lista">Lista</string>
    <string name="login">Conectarse</string>
    <string name="menu_actualizar_inventario">Actualizar Inventario</string>
    <string name="menu_configuracion">Configuracion</string>
    <string name="menu_consultar_inventario">Consultar Inventario</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_salir">Salir</string>
    <string name="nombre_archivo">Nombre del archivo</string>
    <string name="numero_serie">Numero de serie</string>
    <string name="numero_serie_actual">Numero de serie actual</string>
    <string name="numero_serie_nuevo">Nuevo numero de serie</string>
    <string name="numero_serie_nuevo_hint">Nuevo NºSerie</string>
    <string name="partida">Partida</string>
    <string name="partida_actual">Partida actual</string>
    <string name="partida_lista">Lista de partidas</string>
    <string name="partida_nueva">Nueva Partida</string>
    <string name="permiso_camara_denegado">No puedes escanear si no das permiso</string>
    <string name="permiso_uso_camara">Por favor permite que la app acceda a la cámara</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="sin_inventario">No hay cargado ningun inventario</string>
    <string name="sin_producto">No se ha encontrado el producto</string>
    <string name="sin_tabla">No existe la tabla</string>
    <string name="sin_unidades_contadas">No hay informacion para guardar</string>
    <string name="tabla_cargada">Tabla cargada satisfactoriamente</string>
    <string name="unidades">Unidades</string>
    <string name="unidades_contadas">Unidades contadas</string>
    <string name="usuario">Usuario</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="menu_escanear">"Volver"</string>
</resources>
