<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModificarPartidaActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="75dp"
        android:layout_weight="1"
        android:text="@string/partida_lista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Spinner
        android:id="@+id/spPartida"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="30dp"
        android:layout_weight="1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvActualPartida" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="75dp"
        android:layout_weight="1"
        android:text="@string/partida_nueva"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/etNuevaPartida"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/partida_nueva"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spPartida" />

    <TextView
        android:id="@+id/tvActualPartida"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="30dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="prueba"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="150dp"
        android:layout_weight="1"
        android:text="@string/partida_actual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGuardarSalir"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="100dp"
        android:layout_weight="1"
        android:onClick="guardarSalir"
        android:text="@string/guardar_salir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="100dp"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="volver"
        android:text="@string/btn_volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>