<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/buttonReiniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/NaranjaRuano"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="630dp"
        android:text="@string/reiniciar" />

    <TextView
        android:id="@+id/tvCodigoBarras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="250dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="530dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/codigo_barras" />

    <TextView
        android:id="@+id/tvCodigoBarras2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="530dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/codigo_barras" />

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="250dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="430dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/descripcion" />

    <TextView
        android:id="@+id/tvDescripcion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="430dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/descripcion" />

    <TextView
        android:id="@+id/tvIdArticulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="250dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="330dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/articulo" />

    <TextView
        android:id="@+id/tvIdArticulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="330dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/articulo" />

    <TextView
        android:id="@+id/tvCombinacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="250dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="230dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/combinacion" />

    <TextView
        android:id="@+id/tvCombinacion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="230dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/combinacion" />

    <TextView
        android:id="@+id/tvPartida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="250dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="130dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/partida" />

    <TextView
        android:id="@+id/tvPartida2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="130dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/partida" />

    <TextView
        android:id="@+id/tvFechaCaducidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="30dp"
        android:text="@string/fecha_caducidad"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168" />

    <TextView
        android:id="@+id/tvFechaCaducidad2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="30dp"
        android:text="@string/fecha_caducidad"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168" />

    <TextView
        android:id="@+id/tvNumeroSerie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="10dp"
        android:text="@string/numero_serie"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11" />

    <TextView
        android:id="@+id/tvNumeroSerie2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="400dp"
        android:layout_marginBottom="10dp"
        android:text="@string/numero_serie"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11" />

    <TextView
        android:id="@+id/tvUnidadesContadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="10dp"
        android:text="@string/unidades_contadas"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvUnidadesContadas2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="500dp"
        android:layout_marginBottom="10dp"
        android:text="@string/unidades_contadas"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>